test/compile-errors/extern-ptr-with-type-param.crow.ast.repr
file-ast(
	specs: []
	aliases: []
	structs: [struct(range(0, 16), "", public, [name-range(2, a)], none, extern-ptr)]
	funs: [])
